# Anecites

./: .dockerignore  .env.example  .gitignore  package-lock.json  package.json  tsconfig.base.json  turbo.json
apps/collab/: package.json
apps/collab/src/: config.ts  index.ts  replay-evidence.ts  room-authorization.ts  server.ts  telemetry.ts
apps/collab/test/: collab.test.mjs  replay-evidence.test.mjs  telemetry.test.mjs
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/dist-web/: index.html
apps/desktop/src/: App.tsx  CandidateEditorPanel.tsx  LandingPage.tsx  MeetingVideo.tsx  NativeMonitorPanel.tsx  ReviewQueuePanel.tsx  evidence-playback.ts  main.tsx  (+14 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/native/: capture_affinity.rs  commands.rs  environment.rs  mod.rs  platform.rs  process_scanner.rs  prohibited_applications.rs  types.rs  virtualization.rs  window_monitor.rs
apps/desktop/src-tauri/tests/: native_commands.rs
apps/media-inference/: Dockerfile  package.json  requirements.txt
apps/media-worker/: Dockerfile  package.json
apps/server/: package.json  tsconfig.json
docker/: .env.example  docker-compose.yml  judge0.conf  livekit-egress.yaml  livekit.yaml
docs/: ARCHITECTURE.md  PRD.md  TECH_STACK.md  implementation_plan.md  public-demo.md  recording-deployment-reviewer-playback-plan.md  task.md
scripts/: list-workspaces.mjs  run-workspace-script.mjs  start-public-demo.mjs  verify-docker.mjs  verify-root.mjs  workspace-utils.mjs
(+116 files in other folders)
