[package]
name = "anecites-desktop"
version = "0.0.0"
description = "Anecites desktop interview client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
